--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 }
 body {
     color: #fff;
-    background: url(../../images/yosemite.jpg) no-repeat center center fixed;
+    background: url(../../images/bike-bg.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -71,4 +71,43 @@ article{ padding: 20px !important; }
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.4);
+}
+input[type=text]{
+    border: 0;
+    margin: 10px;
+    border-bottom: 4px solid #FFF;
+    width: 250px;
+    height: 40px;
+    padding: 10px;
+    outline: none;
+    font-size: 15px;
+    background: rgba(255, 255, 255, 0.2);
+    color: #fff;
+}
+/* IE 6 */
+* html footer.footerContainer {
+   position:absolute;
+   top:expression((0-(footer.offsetHeight)+(document.documentElement.clientHeight ? document.documentElement.clientHeight : document.body.clientHeight)+(ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop))+'px');
+}
+footer.footerContainer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    height: 60px;
+    line-height: 5;
+    font-size: 12px;
+    color: #b2b2b2;
+}
+ul.footerLeftContent li{
+    float: left;
+    padding-left: 10px;
+}
+ul.footerRightContent{
+    float: right;
+}
+ul.footerRightContent li{
+    float: left;
+    padding-right: 10px;
 }
